# music-player-ui

./: .env  .gitignore  LICENSE  README.md  TODO.md  app.py  colors.py  debian-dependencies.txt  grid.py  jellyfin-api-test.py  jellyfin_player.py  linear_gradient.py  meson.build  multilinetextwindow.py  os_utils.py  player.py  playerctl.py  rounded_borders.py  shell.nix  test.py  textwindow.py  window.py
.claude/: settings.local.json.tmp.2730293.e547315a1117
scripts/: bt-receiver
src/: application.vala  art-cache.vala  artwork.vala  bluetooth-media.vala  cava.vala  config.vala  jellyfin.vala  menu-page.vala  menu.vala  player-page.vala  player.vala  session-info.vala  style.vala  system-actions.vala  test.py  test2.py
src/effects/: clipping_mask.py  graphic_surface.py  linear_gradient.py  rounded_borders.py
src/players/: jellyfin_player.py  player.py  playerctl.py
src/utils/: colors.py  debug.py  os_utils.py  vec2.py
src/windows/: app.py  flexigrid.py  grid.py  imagewindow.py  progressbar.py  textwindow.py  window.py
testing/: jellyfin-api-test.py  pygame-gradients.py  pygame-rounded-corners.py
